fixed padding on mobile

--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ body {
     flex-direction: column;
     align-items: center;
     width: 90%;
-    padding-top: 1remgit add ;
+    padding-top: 1rem ;
   }
 
   .profileImage{
